# Final-assignment

./: CMakeLists.txt
assignment1/: assignment1_character.cpp  main.cpp
assignment1/shader/: bot.frag  bot.vert  flower.frag  flower.vert  ground.frag  ground.vert  skybox.vert
